--- a/Proyecto_ASPNETCoreWebApi/Properties/launchSettings.json
+++ b/Proyecto_ASPNETCoreWebApi/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "api/departments",
+      //"launchUrl": "api/departments",
       "applicationUrl": "https://localhost:7295;http://localhost:5295",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -22,7 +22,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/departments",
+      //"launchUrl": "api/departments",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
